Parse GL_VERSION incorrectly when version string is without release_number

BUG=620677

Review-Url: https://codereview.chromium.org/2070313002
Cr-Commit-Position: refs/heads/master@{#401221}

Former-commit-id: 499933129cdb8dbc7c35c146f86ce75504252dd9